Fix workflow by creating dist folder and improving deploy
Added a step to create the 'dist' folder and fixed deployment issues.

--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: GitHub Snake Game
 
 on:
-  # Schedule the workflow to run daily at midnight UTC
   schedule:
     - cron: "0 0 * * *"
-
-  # Allow manual triggering of the workflow
   workflow_dispatch:
-
-  # Trigger the workflow on pushes to the main branch
   push:
     branches:
       - main
@@ -19,11 +14,13 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Generate the snake animations
+      # (Fix) تأكد من وجود مجلد dist
+      - name: Create dist folder
+        run: mkdir -p dist
+
       - name: Generate GitHub Contributions Snake Animations
         uses: Platane/snk@v3
         with:
@@ -35,11 +32,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 3: Deploy the generated files to the 'output' branch
+      # (Fix) نشر بدون مشاكل git (الحل الحقيقي لمشكلة exit 128)
       - name: Deploy to Output Branch
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           publish_branch: output
+          force_orphan: true
           commit_message: "Update snake animation [skip ci]"
